@@ -1,39 +1,28 @@
 package com.connectJPA.LinguaVietnameseApp.configuration;
 
-import com.connectJPA.LinguaVietnameseApp.service.AuthenticationService;
-import com.fasterxml.jackson.databind.util.Converter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.io.Resource;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.oauth2.jose.jws.MacAlgorithm;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationProvider;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
-import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
 import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
+
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyFactory;
 import java.security.interfaces.RSAPublicKey;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
-import java.util.Collection;
-import java.util.UUID;
 
 @Configuration
 @EnableWebSecurity
@@ -41,75 +30,50 @@ import java.util.UUID;
 @Slf4j
 public class SecurityConfig {
 
-    @Value("${jwt.signer-key}")
-    private String signerKey;
-
-    @Value("${jwt.header}")
-    private String jwtHeader;
+//    @Value("${jwt.signer-key}")
+//    private String signerKey;
 
     @Value("classpath:public_key.pem")
     Resource publicKeyResource;
 
-    private final JwtAuthFilter jwtAuthFilter;
-    private final AuthenticationService authenticationService;
-
-    public SecurityConfig(JwtAuthFilter jwtAuthFilter, AuthenticationService authenticationService) {
-        this.jwtAuthFilter = jwtAuthFilter;
-        this.authenticationService = authenticationService;
-    }
-
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity httpSecurity) throws Exception {
-        httpSecurity
-                .authorizeHttpRequests(request -> request
-                        .requestMatchers("/api/v1/auth/**",
-                                "/api/swagger",
-                                "/api/swagger/**",
-                                "/api/swagger-ui/**",
-                                "/api/api-docs/**",
-                                "/swagger-ui/**",
-                                "/api/v1/users",
-                                "/api/v1/users/check-email",
-                                "/api/v1/interests",
-                                "/api/v1/character3ds",
-                                "/api/v1/languages",
-                                "/api/v1/badge",
-                                "/api/v1/certificates",
-                                "/v3/api-docs/**")
-                        .permitAll()
-                        .anyRequest().authenticated())
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http
                 .csrf(AbstractHttpConfigurer::disable)
-                .oauth2ResourceServer(oauth2 -> oauth2
-                        .jwt(jwtConfigurer -> {
-                            try {
-                                jwtConfigurer
-                                        .decoder(jwtDecoder())
-                                        .jwtAuthenticationConverter(jwtAuthenticationConverter());
-                            } catch (Exception e) {
-                                throw new RuntimeException(e);
-                            }
-                        })
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(
+                                "/api/v1/auth/**",
+                                "/api/swagger", "/api/swagger/**", "/swagger-ui/**", "/v3/api-docs/**",
+                                "/api/v1/users", "/api/v1/users/check-email",
+                                "/api/v1/interests", "/api/v1/character3ds", "/api/v1/languages",
+                                "/api/v1/badge", "/api/v1/certificates"
+                        ).permitAll()
+                        .anyRequest().authenticated()
                 )
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt
+                                .decoder(jwtDecoder())
+                                .jwtAuthenticationConverter(jwtAuthenticationConverter())
+                        )
+                );
 
-        return httpSecurity.build();
+        return http.build();
     }
 
     @Bean
-    public JwtAuthenticationConverter jwtAuthenticationConverter() {
-        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-        converter.setPrincipalClaimName("sub");
-        return converter;
+    public JwtDecoder jwtDecoder() {
+        try {
+            RSAPublicKey publicKey = getPublicKey();
+            return NimbusJwtDecoder.withPublicKey(publicKey).build();
+        } catch (Exception e) {
+            log.error("Failed to initialize JwtDecoder with public key", e);
+            throw new RuntimeException("Failed to initialize JwtDecoder", e);
+        }
     }
 
-    @Bean
-    JwtDecoder jwtDecoder() throws Exception {
-        RSAPublicKey publicKey = getPublicKey();
-        return NimbusJwtDecoder.withPublicKey(publicKey).build();
-    }
-
+    // Thêm hàm helper để đọc public key (copy từ AuthenticationServiceImpl)
     private RSAPublicKey getPublicKey() throws Exception {
-        String key = new String(Files.readAllBytes(publicKeyResource.getFile().toPath()), StandardCharsets.UTF_8);
+        String key = new String(publicKeyResource.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         key = key.replaceAll("-----BEGIN (.*)-----", "")
                 .replaceAll("-----END (.*)-----", "")
                 .replaceAll("\\s", "");
@@ -119,4 +83,10 @@ public class SecurityConfig {
         return (RSAPublicKey) kf.generatePublic(spec);
     }
 
+    @Bean
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setPrincipalClaimName("sub");
+        return converter;
+    }
 }
